<resources>
    <string name="nav_code">See Payment code</string>
    <string name="toast_wallet_reset">Your wallet was reset!\nIt will take some time to recover.</string>
    <string name="wallet_disclaimer_fragment_remind_safety">Use at your own risk. Read the &lt;u&gt;safety notes&lt;/u&gt;.</string>
    <string name="wallet_disclaimer_fragment_remind_backup">You need to &lt;u&gt;back up your wallet&lt;/u&gt;!</string>
    <string name="blockchain_state_progress_hours">%1$s, %2$d hours behind</string>
    <string name="blockchain_state_progress_days">%1$s, %2$d days behind</string>
    <string name="blockchain_state_progress_weeks">%1$s, %2$d weeks behind</string>
    <string name="blockchain_state_progress_months">%1$s, %2$d months behind</string>
    <string name="blockchain_state_progress_downloading">Synchronizing with network</string>
    <string name="blockchain_state_progress_stalled">Synchronization stalled</string>
    <string name="blockchain_state_progress_problem_storage">Synchronizing: Storage problem</string>
    <string name="blockchain_state_progress_problem_network">Synchronizing: Network problem</string>
    <string name="wallet_address_fragment_clipboard_msg">$PAC address copied to clipboard</string>
    <string name="wallet_address_dialog_fragment_hint">To protect your privacy, your address will change once it receives a payment.</string>
    <string name="wallet_balance_fragment_too_much">This amount is quite high for carrying in your pocket. Please move some to a safer place.</string>
    <string name="wallet_balance_fragment_replaying">Balance is unavailable during replay.</string>
    <string name="exchange_rates_activity_title">Exchange rates</string>
    <string name="exchange_rates_fragment_empty_text">Could not load exchange rates.</string>
    <string name="exchange_rates_fragment_empty_search">Could not find exchange rate.</string>
    <string name="exchange_rates_fragment_default">(default)</string>
    <string name="exchange_rates_fragment_rate">rate</string>
    <string name="exchange_rates_fragment_balance">balance</string>
    <string name="exchange_rates_fragment_source">Price from %s</string>
    <string name="exchange_rates_options_search">Search exchange rate</string>
    <string name="exchange_rates_context_set_as_default_title">Set as default</string>
    <string name="wallet_transactions_fragment_empty_text_received">No $PAC received so far.</string>
    <string name="wallet_transactions_fragment_empty_text_sent">No $PAC sent so far.</string>
    <string name="wallet_transactions_fragment_empty_text_howto">How to get $PAC?\n\nTrade for traditional money,\nsell goods or services or\nearn by working.</string>
    <string name="wallet_transactions_row_warning_backup">Congratulations, you received your first payment! Have you already &lt;u&gt;backed up your wallet&lt;/u&gt;, to protect against loss?</string>
    <string name="wallet_transactions_row_warning_storage_encryption">Hint: to increase the safety of your wallet, you can &lt;u&gt;encrypt your device&lt;/u&gt;. This also protects data of other apps.</string>
    <string name="wallet_transactions_fragment_coinbase">mined</string>
    <string name="wallet_transactions_fragment_internal">internal</string>
    <string name="wallet_transactions_options_filter">Filter</string>
    <string name="wallet_transactions_options_filter_all">All payments</string>
    <string name="wallet_transactions_options_filter_received">Received payments</string>
    <string name="wallet_transactions_options_filter_sent">Sent payments</string>
    <string name="wallet_options_safety_menu">Safety</string>
    <string name="wallet_options_encrypt_keys_set">Set spending PIN</string>
    <string name="wallet_options_encrypt_keys_change">Change spending PIN</string>
    <string name="wallet_options_safety">Safety notes</string>
    <string name="wallet_options_donate">Tip / donate</string>
    <string name="wallet_donate_address_label">Donation for $PAC Wallet</string>
    <string name="wallet_low_storage_dialog_title">Internal device storage space low!</string>
    <string name="wallet_low_storage_dialog_msg">$PAC Wallet uses internal storage for remembering transactions and blocks. If it runs out of space, it will stop working and your $PAC will be at risk!\n\nDo you want to open the Application Manager to uninstall unneeded apps?</string>
    <string name="wallet_low_storage_dialog_button_apps">Manage apps</string>
    <string name="wallet_timeskew_dialog_title">Check date &amp; time settings</string>
    <string name="wallet_timeskew_dialog_msg">Your device time is off by %d minutes. You probably cannot send or receive $PAC due to this problem.\n\nYou should check and if necessary correct your date, time and timezone settings.</string>
    <string name="wallet_version_dialog_title">A new version is available!</string>
    <string name="wallet_version_dialog_msg">This version fixes important bugs. For details, see the change log on Google Play.</string>
    <string name="wallet_version_dialog_msg_deprecated">If you don\'t see an update, this probably means your version of Android isn\'t supported any more.</string>
    <string name="wallet_version_dialog_button_market">Google Play</string>
    <string name="wallet_version_dialog_button_binary">Download</string>
    <string name="wallet_old_sdk_dialog_title">Android version is out of date</string>
    <string name="wallet_old_sdk_dialog_message">Chances are that one of the next releases of $PAC Wallet will not support your device any more. In some cases, it can get difficult to spend coins on this device.\n\nUnless you know what you are doing, it is recommended to move out your coins soon.</string>
    <string name="send_coins_activity_title">Send $PAC</string>
    <string name="send_coins_fragment_request_payment_request_progress">Fetching signature from %s…</string>
    <string name="send_coins_fragment_request_payment_request_failed_title">Fetching signature failed</string>
    <string name="send_coins_fragment_request_payment_request_wrong_signature">Wrong signature!</string>
    <string name="send_coins_fragment_payee_verified_by">verified by: %s</string>
    <string name="send_coins_fragment_payee_verified_by_unknown">unknown</string>
    <string name="send_coins_fragment_receiving_address_label">Pay to</string>
    <string name="send_coins_fragment_receiving_address_hint">type address or name</string>
    <string name="send_coins_fragment_receiving_address_error">Invalid $PAC address!</string>
    <string name="send_coins_fragment_receiving_address_own">You\'re about to send to yourself!</string>
    <string name="send_coins_fragment_receiving_address_complex">complex\naddress</string>
    <string name="send_coins_fragment_pending">(%s waiting for confirmation)</string>
    <string name="send_coins_fragment_amount_label">Amount to pay</string>
    <string name="send_coins_fragment_hint_fee_economic">An economic fee of %s will be paid. Use \'economic\' only if you don\'t care about confirmation time.</string>
    <string name="send_coins_fragment_hint_fee">A network fee of %s will be paid.</string>
    <string name="send_coins_fragment_hint_fee_priority">A priority fee of %s will be paid. If you care about low fees, use \'priority\' only if you need confirmation as soon as possible.</string>
    <string name="send_coins_fragment_hint_dusty_send">The amount is too small to send.</string>
    <string name="send_coins_fragment_hint_insufficient_money">Not enough available coins. You\'re missing %s.</string>
    <string name="send_coins_fragment_hint_empty_wallet_failed">The amount of tiny payments in your wallet doesn\'t add up to a sendable value.</string>
    <string name="send_coins_fragment_hint_replaying">Currently payments are not possible because a replay is in progress.</string>
    <string name="send_coins_fragment_direct_payment_enable">Send payment directly to the payee.</string>
    <string name="send_coins_fragment_direct_payment_ack">Your payment was successfully sent directly.</string>
    <string name="request_coins_activity_title">Request $PAC</string>
    <string name="encrypt_keys_dialog_message">Spending from your wallet will be protected with the chosen PIN.</string>
    <string name="encrypt_keys_dialog_warning">Important: You need to remember your PIN! Do not use common numbers (like birthdates).</string>
    <string name="encrypt_keys_dialog_password_old">Old PIN</string>
    <string name="encrypt_keys_dialog_show">Show PIN</string>
    <string name="preferences_category_labs">Labs</string>
    <string name="preferences_precision_title"><font color="#FAEC2C">Denomination and precision</font></string>
    <string name="preferences_precision_summary">Unit to show amounts in. This does not affect computations.</string>
    <string name="preferences_own_name_title"><font color="#FAEC2C">Own name</font></string>
    <string name="preferences_own_name_summary">Name of yourself, to be added to payment requests. Try to keep it short.</string>
    <string name="preferences_send_coins_autoclose_title"><font color="#FAEC2C">Auto-close send coins dialog</font></string>
    <string name="preferences_send_coins_autoclose_summary">When the payment is made, the send dialog will close automatically.</string>
    <string name="preferences_connectivity_notification_title"><font color="#FAEC2C">Connectivity indicator</font></string>
    <string name="preferences_connectivity_notification_summary">Show current number of connected peers in the notification area.</string>
    <string name="preferences_trusted_peer_title"><font color="#FAEC2C">Trusted peer</font></string>
    <string name="preferences_trusted_peer_summary">IP or hostname of single peer to connect to.</string>
    <string name="preferences_trusted_peer_only_title"><font color="#FAEC2C">Skip regular peer discovery</font></string>
    <string name="preferences_trusted_peer_only_summary">Prevents connecting to any peers besides the trusted peer.</string>
    <string name="preferences_data_usage_title"><font color="#FAEC2C">Data usage</font></string>
    <string name="preferences_data_usage_summary">Show options to restrict data usage on mobile networks.</string>
    <string name="preferences_remind_balance_title"><font color="#FAEC2C">Balance reminder</font></string>
    <string name="preferences_remind_balance_summary">After a couple of weeks of not being used, the app will notify if there are still coins in the wallet.</string>
    <string name="about_version_title"><font color="#FAEC2C">Version</font></string>
    <string name="about_copyright_title"><font color="#FAEC2C">Copyright</font></string>
    <string name="about_license_title"><font color="#FAEC2C">License</font></string>
    <string name="about_category_credits">This app is using…</string>
    <string name="about_market_app_title"><font color="#FAEC2C">Google Play page</font></string>
    <string name="about_market_app_summary">Review or rate the app</string>
    <string name="about_faq_title"><font color="#FAEC2C">FAQ</font></string>
    <string name="about_faq_summary">Frequently asked questions about the app</string>
    <string name="button_scan">Scan</string>
    <string name="private_key_password">PIN</string>
    <string name="private_key_bad_password">bad PIN!</string>
    <string name="settings_instasend_title"><font color="#FAEC2C">Enable InstantSend</font></string>
    <string name="settings_warning_title"><font color="#FAEC2C">Warning</font></string>
    <string name="settings_litemode_title"><font color="#FAEC2C">Enable Lite Mode</font></string>
    <string name="settings_disclaimer_title"><font color="#FAEC2C">Show disclaimer</font></string>
    <string name="settings_BIP70_title"><font color="#FAEC2C">BIP70 for scan-to-pay</font></string>
    <string name="settings_lookup_title"><font color="#FAEC2C">Look up wallet names</font></string>
</resources>