<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <de.schildbach.wallet.ui.preference.ListPreferenceCustom
        android:defaultValue="4/0"
        android:entries="@array/preferences_precision_labels"
        android:entryValues="@array/preferences_precision_values"
        android:key="btc_precision"
        android:summary="@string/preferences_precision_summary"
        android:title="@string/preferences_precision_title" />

    <de.schildbach.wallet.ui.preference.EditTextPreferenceCustom
        android:key="own_name"
        android:textColor="@color/bg_nav"
        android:summary="@string/preferences_own_name_summary"
        android:title="@string/preferences_own_name_title" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="send_coins_autoclose"
        android:summary="@string/preferences_send_coins_autoclose_summary"
        android:title="@string/preferences_send_coins_autoclose_title" />
    <CheckBoxPreference
        android:defaultValue="false"
        android:key="connectivity_notification"
        android:summary="@string/preferences_connectivity_notification_summary"
        android:title="@string/preferences_connectivity_notification_title" />

    <de.schildbach.wallet.ui.preference.EditTextPreferenceCustom
        android:key="trusted_peer"
        android:textColor="@color/bg_nav"
        android:summary="@string/preferences_trusted_peer_summary"
        android:title="@string/preferences_trusted_peer_title" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="trusted_peer_only"
        android:summary="@string/preferences_trusted_peer_only_summary"
        android:title="@string/preferences_trusted_peer_only_title" />

    <!--<ListPreference-->
    <!--android:entries="@array/preferences_block_explorer_labels"-->
    <!--android:entryValues="@array/preferences_block_explorer_values"-->
    <!--android:key="block_explorer"-->
    <!--android:summary="@string/preferences_block_explorer_summary"-->
    <!--android:title="@string/preferences_block_explorer_title"-->
    <!--android:visibility="invisible"/>-->

    <Preference
        android:key="data_usage"
        android:summary="@string/preferences_data_usage_summary"
        android:title="@string/preferences_data_usage_title">
        <intent
            android:targetClass="com.android.settings.Settings$DataUsageSummaryActivity"
            android:targetPackage="com.android.settings" />
    </Preference>

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="remind_balance"
        android:summary="@string/preferences_remind_balance_summary"
        android:title="@string/preferences_remind_balance_title" />

    <PreferenceCategory android:title="@string/preferences_category_labs">
        <Preference
            android:icon="@drawable/ic_warning_grey600_24dp"
            android:summary="This is all unfinished stuff. Use at your own risk!"
            android:title="@string/settings_warning_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="labs_instantx_enabled"
            android:summary="Allow InstantSend to be used to send and receive coins."
            android:title="@string/settings_instasend_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="labs_lite_mode"
            android:summary="Reduce bandwidth usage."
            android:title="@string/settings_litemode_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="disclaimer"
            android:summary="Have you really read the safety notes? Did you already back up your wallet to a safe place?"
            android:title="@string/settings_disclaimer_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="labs_qr_payment_request"
            android:summary="Use payment protocol for QR-code initiated payments"
            android:title="@string/settings_BIP70_title" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="look_up_wallet_names"
            android:summary="When sending coins, use DNSSEC to look up wallet names from the domain name system."
            android:title="@string/settings_lookup_title" />
    </PreferenceCategory>

</PreferenceScreen>