<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference
        android:key="about_version"
        android:title="@string/about_version_title" />
    <Preference
		android:summary="\n© 2018 the $PAC Wallet Developers"
        android:title="@string/about_copyright_title" />
    <Preference
        android:key="about_license"
        android:summary="https://www.gnu.org/licenses/gpl-3.0.txt"
        android:title="@string/about_license_title" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://www.gnu.org/licenses/gpl-3.0.txt" />
    </Preference>
	<!--<Preference-->
		<!--android:key="about_source"-->
		<!--android:summary="https://github.com/HashEngineering/dash-wallet"-->
		<!--android:title="@string/about_source_title" >-->
		<!--<intent-->
			<!--android:action="android.intent.action.VIEW"-->
			<!--android:data="https://github.com/HashEngineering/dash-wallet" />-->
	<!--</Preference>-->
    <Preference
        android:key="about_market_app"
        android:summary="@string/about_market_app_summary"
        android:title="@string/about_market_app_title" />
    <Preference
        android:key="about_faq"
        android:summary="@string/about_faq_summary"
        android:title="@string/about_faq_title" >
        <intent
            android:action="android.intent.action.VIEW"
            android:data="https://play.google.com/store/apps/details?id=org.paccoin.wallet" />
    </Preference>

    <PreferenceCategory android:title="@string/about_category_credits" >
		<Preference
			android:key="about_credits_bitcoinj"
			android:summary="https://github.com/PACCommunity/pac-android" >
			<intent
				android:action="android.intent.action.VIEW"
				android:data="https://github.com/PACCommunity/pac-android" />
		</Preference>
        <!--
        <Preference
            android:key="about_credits_zxing"
            android:summary="https://github.com/zxing/zxing"
            android:title="@string/about_credits_zxing_title" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/zxing/zxing" />
        </Preference>
        -->
        <Preference
            android:key=""
            android:summary=""
            android:title="" >
            <intent
                android:action=""
                android:data="" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>