<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:dividerPadding="8dp"
    android:measureWithLargestChild="true"
    android:orientation="horizontal">

    <Button
        android:id="@+id/wallet_actions_request"
        style="@style/My.Widget.ActionButton"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/request_button_style"
        android:drawableLeft="@drawable/ic_menu_back_arrow_black"
        android:singleLine="true"
        android:text="@string/request_coins_activity_title"
        android:textAllCaps="true"
        android:textColor="@color/fg_significant"
        android:textSize="@dimen/font_size_tiny"
        android:textStyle="bold" />

    <Space
        android:layout_width="0px"
        android:layout_height="0px"
        android:layout_weight="1" />

    <Button
        android:id="@+id/wallet_actions_send"
        style="@style/My.Widget.ActionButton"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/send_button_style"
        android:drawableRight="@drawable/ic_menu_back_arrow_right"
        android:singleLine="true"
        android:text="@string/send_coins_activity_title"
        android:textAllCaps="true"
        android:textColor="@color/fg_network"
        android:textSize="@dimen/font_size_tiny"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/wallet_actions_send_qr"
        style="@style/My.Widget.ActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/button_scan"
        android:src="@drawable/ic_photo_camera_white_24dp" />

</LinearLayout>